--- a/index.html
+++ b/index.html
@@ -10,29 +10,35 @@
   <body>
     <div class="container">
       <div class="display">
+        12345678
       </div>
 
-      <div class="buttons">
+      <div class="buttons">        
+        <button>C</button>
         <button></button>
         <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
+        <button>/</button>
+
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>*</button>
+
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>-</button>
+
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>+</button>
+
+        <button>0</button>
+        <button>00</button>
+        <button>.</button>
+        <button>=</button>
+
       </div>
     </div>
     <script type="text/javascript" src="app.js"></script>
