Remove not working buttons

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <button class="operator">+</button>
 
         <button>0</button>
-        <button>00</button>
-        <button>.</button>
+        <button></button>
+        <button></button>
         <button class="operator">=</button>
 
       </div>
